--- a/src/main/resources/templates/game/playground.html
+++ b/src/main/resources/templates/game/playground.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{layout/partial/head::head('Playground')}"></head>
+<head th:replace="~{layout/partial/head::head(title='Playground', scripts=~{::head/script})}">
+    <script th:src="@{/static/js/utils.js}"></script>
+    <script th:src="@{/static/js/game-message-bus.js}"></script>
+    <script th:src="@{/static/js/players.js}"></script>
+</head>
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
@@ -15,7 +19,10 @@
                     <table class="table table-sm table-secondary">
                         <tbody>
                         <tr th:each="player : ${players}">
-                            <td class="align-middle" style="width: 5%;"><i class="bi bi-circle-fill"></i></td>
+                            <td class="align-middle" style="width: 5%;">
+                                <i th:class="'bi ' + (${player.me} ? 'bi-person-arms-up' :'bi-question')"
+                                   th:id="'player-status__' + ${player.id}"></i>
+                            </td>
                             <td>
                                 <span th:text="${player.name}" th:unless="${#strings.isEmpty(player.name)}">Name</span>
                                 <br th:unless="${#strings.isEmpty(player.name)}"/>
@@ -43,5 +50,20 @@
         </div>
     </div>
 </div>
+<script th:inline="javascript">
+    (function () {
+        const gameId = /*[[${gameId}]]*/null;
+        const myPlayerId = /*[[${myPlayerId}]]*/null;
+
+        window.Myna = window.Myna || {};
+        window.Myna.Instances = window.Myna.Instances || {};
+
+        window.Myna.Instances.messageBus = new window.Myna.GameMessageBus(gameId, myPlayerId);
+        window.Myna.Instances.messageBus.init();
+
+        window.Myna.Instances.players = new window.Myna.Players(myPlayerId, window.Myna.Instances.messageBus);
+        window.Myna.Instances.players.init();
+    })();
+</script>
 </body>
 </html>
