--- a/src/main/resources/templates/layout/partial/head.html
+++ b/src/main/resources/templates/layout/partial/head.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:fragment="head(title)">
+<head th:fragment="head(title)" th:with="links=${links}, scripts=${scripts}">
+  <title th:text="(${title} ? ${title} + ' • ' : '') + 'Myna'">Myna</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" rel="stylesheet">
   <link th:href="@{/webjars/bootstrap-icons/1.11.2/font/bootstrap-icons.min.css}" rel="stylesheet">
   <link th:href="@{/static/main.css}" rel="stylesheet">
-  <title th:text="(${title} ? ${title} + ' • ' : '') + 'Myna'">Myna</title>
+  <th:block th:if="${links} != null">
+    <th:block th:insert="${links}" />
+  </th:block>
+  <th:block th:if="${scripts} != null">
+    <th:block th:insert="${scripts}" />
+  </th:block>
 </head>
 
 <body>
